trying to loose georeference

--- a/Tiling.ipynb
+++ b/Tiling.ipynb
@@ -40,34 +40,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "7ffec791-bd33-476b-814f-7f8884355b40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "1e8124d8-7595-42f0-96f2-91e8ed92dccc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "savedir = r\"E:/W_Katrin/Kigali/Raster/tiles\"\n",
+    "filename = r\"E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset.tif\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90a11b11-4d0d-4154-9fde-a61ded62e046",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = Image.open(filename)\n",
+    "#tiling(filename, savedir, (256, 256))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4c2b33de-c0a5-4e3f-b34d-19202f3ec5e5",
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnidentifiedImageError",
-     "evalue": "cannot identify image file 'E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_1.tiff'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnidentifiedImageError\u001b[0m                    Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [15]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m savedir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mE:/W_Katrin/Kigali/Raster/tiles\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      7\u001b[0m filename \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mE:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_1.tiff\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 9\u001b[0m img \u001b[38;5;241m=\u001b[39m \u001b[43mImage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mE:\\W_Katrin\\miniconda3\\envs\\tue_dl2\\lib\\site-packages\\PIL\\Image.py:3030\u001b[0m, in \u001b[0;36mopen\u001b[1;34m(fp, mode, formats)\u001b[0m\n\u001b[0;32m   3028\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m message \u001b[38;5;129;01min\u001b[39;00m accept_warnings:\n\u001b[0;32m   3029\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(message)\n\u001b[1;32m-> 3030\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m UnidentifiedImageError(\n\u001b[0;32m   3031\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcannot identify image file \u001b[39m\u001b[38;5;132;01m%r\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m (filename \u001b[38;5;28;01mif\u001b[39;00m filename \u001b[38;5;28;01melse\u001b[39;00m fp)\n\u001b[0;32m   3032\u001b[0m )\n",
-      "\u001b[1;31mUnidentifiedImageError\u001b[0m: cannot identify image file 'E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_1.tiff'"
+     "data": {
+      "text/plain": [
+       "<osgeo.gdal.Dataset; proxy of <Swig Object of type 'GDALDatasetShadow *' at 0x0000020F3BC19770> >"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from osgeo import gdal\n",
+    "dataset = gdal.Open(filename, gdal.GA_ReadOnly)\n",
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b2a3a106-00c7-4eeb-8dbf-e8eaf71b2beb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "13162\n",
+      "8267\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "import sys\n",
-    "from PIL import Image\n",
+    "print(dataset.RasterCount)\n",
+    "  \n",
+    "# width \n",
+    "print(dataset.RasterXSize)\n",
+    "  \n",
+    "# height\n",
+    "print(dataset.RasterYSize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "bbd19a43-f07c-4c71-ad55-8d17bb1ebb12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<osgeo.gdal.Dataset; proxy of <Swig Object of type 'GDALDatasetShadow *' at 0x0000020F3F0FA160> >\n",
+      "E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset.jpg\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'save' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [31]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m outfile \u001b[38;5;241m=\u001b[39m filename\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(outfile)\n\u001b[1;32m---> 11\u001b[0m \u001b[43msave\u001b[49m(im, outputfile, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mJPEG\u001b[39m\u001b[38;5;124m\"\u001b[39m, quality\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'save' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2, os\n",
+    "base_path = \"E:/W_Katrin/Kigali/Raster/\"\n",
+    "new_path = \"E:/W_Katrin/Kigali/Raster/\"\n",
+    "\n",
+    "#print(img)\n",
+    "\n",
+    "im = gdal.Open(filename)\n",
+    "print(im)\n",
     "\n",
     "\n",
-    "savedir = r\"E:/W_Katrin/Kigali/Raster/tiles\"\n",
-    "filename = r\"E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset.tif\"\n",
+    "outfile = filename.split('.')[0] + '.jpg'\n",
+    "print(outfile)\n",
+    "save(im, outputfile, \"JPEG\", quality=100)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "1c1a4057-199c-401b-82ab-131dd195a10f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'earthpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [41]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrasterio\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mearthpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01met\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mearthpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mspatial\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mes\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mearthpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mep\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'earthpy'"
+     ]
+    }
+   ],
+   "source": [
+    "import rasterio\n",
+    "import earthpy as et\n",
+    "import earthpy.spatial as es\n",
+    "import earthpy.plot as ep\n",
     "\n",
-    "img = Image.open(filename)\n",
-    "#tiling(filename, savedir, (256, 256))"
+    "raster = rasterio.open(\"E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset.tif\")\n",
+    "raster\n",
+    "band1 = raster.read(1)\n",
+    "band2 = raster.read(2)\n",
+    "band3 = raster.read(3)\n",
+    "\n",
+    "rasterRGB = es.stack(band1, band2, band3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f5522c38-b156-4478-bdde-3afea21725e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'driver': 'GTiff', 'dtype': 'float32', 'nodata': nan, 'width': 13162, 'height': 8267, 'count': 5, 'crs': CRS.from_epsg(32736), 'transform': Affine(0.4963054573117089, 0.0, 173723.36172185623,\n",
+      "       0.0, -0.4963054573117089, 9789230.701895246)}\n",
+      "{'driver': 'JPEG', 'dtype': 'float32', 'nodata': nan, 'width': 13162, 'height': 8267, 'count': 5, 'crs': None, 'transform': None}\n"
+     ]
+    },
+    {
+     "ename": "CPLE_NotSupportedError",
+     "evalue": "JPEG driver doesn't support 5 bands.  Must be 1 (grey), 3 (RGB) or 4 bands (CMYK). ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mInvalidArrayError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [42]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m rasterio\u001b[38;5;241m.\u001b[39mopen(outraster, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mout_meta) \u001b[38;5;28;01mas\u001b[39;00m dest:\n\u001b[1;32m---> 12\u001b[0m        \u001b[43mdest\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite\u001b[49m\u001b[43m(\u001b[49m\u001b[43mraster\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mrasterio\\_io.pyx:1349\u001b[0m, in \u001b[0;36mrasterio._io.DatasetWriterBase.write\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mInvalidArrayError\u001b[0m: Positional argument arr must be an array-like object",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mCPLE_NotSupportedError\u001b[0m                    Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [42]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(out_meta)\n\u001b[0;32m     10\u001b[0m outraster \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mE:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset.jpg\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m rasterio\u001b[38;5;241m.\u001b[39mopen(outraster, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mout_meta) \u001b[38;5;28;01mas\u001b[39;00m dest:\n\u001b[0;32m     12\u001b[0m        dest\u001b[38;5;241m.\u001b[39mwrite(raster)\n",
+      "File \u001b[1;32mrasterio\\_base.pyx:395\u001b[0m, in \u001b[0;36mrasterio._base.DatasetBase.__exit__\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mrasterio\\_base.pyx:386\u001b[0m, in \u001b[0;36mrasterio._base.DatasetBase.close\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mrasterio\\_io.pyx:2125\u001b[0m, in \u001b[0;36mrasterio._io.BufferedDatasetWriterBase.stop\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mrasterio\\_err.pyx:216\u001b[0m, in \u001b[0;36mrasterio._err.exc_wrap_pointer\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mCPLE_NotSupportedError\u001b[0m: JPEG driver doesn't support 5 bands.  Must be 1 (grey), 3 (RGB) or 4 bands (CMYK). "
+     ]
+    }
+   ],
+   "source": [
+    "out_meta = raster.meta.copy()\n",
+    "print(out_meta)\n",
+    "# save out_meta for later use!!\n",
+    "\n",
+    "out_meta.update({\"driver\": \"JPEG\",\n",
+    "                 \"transform\": None,\n",
+    "                 \"crs\": None}\n",
+    "                         )\n",
+    "print(out_meta)\n",
+    "\n",
+    "outraster = \"E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset.jpg\"\n",
+    "with rasterio.open(outraster, \"w\", **out_meta) as dest:\n",
+    "       dest.write(raster)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf3e87ef-7c9c-41a0-bdb6-b368f7c6adf1",
+   "metadata": {},
+   "source": [
+    "Thoughts: \n",
+    "JPG can only hold 3 layers --- \n",
+    "should maybe drop two layers anyways as was also trained to be 3 layers\n"
    ]
   },
   {
@@ -77,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define tiling \n",
+    "# define tiling function \n",
     "def tiling(filename, savedir, target_size): \n",
     "    img = Image.open(filename)\n",
     "    width, height = img.size\n",
@@ -93,66 +281,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ebf6d1f-effb-49b5-9380-66336715c228",
-   "metadata": {},
-   "source": [
-    "import os\n",
-    "import sys\n",
-    "from PIL import Image\n",
-    "\n",
-    "savedir = r\"E:/W_Katrin/Kigali/Raster/tiles\"\n",
-    "filename = r\"E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_1.tiff\"\n",
-    "\n",
-    "img = Image.open(filename)\n",
-    "width, height = img.size\n",
-    "start_pos = start_x, start_y = (0, 0)\n",
-    "cropped_image_size = w, h = (256,256)\n",
-    "\n",
-    "frame_num = 1\n",
-    "for col_i in range(0, width, w):\n",
-    "    for row_i in range(0, height, h):\n",
-    "        crop = img.crop((col_i, row_i, col_i + w, row_i + h))\n",
-    "        save_to= os.path.join(savedir, \"testing_{:02}.png\")\n",
-    "        crop.save(save_to.format(frame_num))\n",
-    "        frame_num += 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "c24dc48b-5ee9-4754-b5fa-66b4ae47608e",
    "metadata": {},
    "source": [
     "### Andere Methode, hier fehlen Randpieces! (nur 270 tiles, bei oberem mehr tiles, auch Randtiles)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "1f4e2afe-e944-4f9a-9fcb-7b544434e7ca",
-   "metadata": {},
-   "source": [
-    "from PIL import Image\n",
-    "from itertools import product\n",
-    "\n",
-    "def tile(filename, dir_in, dir_out, d):\n",
-    "    name, ext = os.path.splitext(filename)\n",
-    "    img = Image.open(os.path.join(dir_in, filename))\n",
-    "    w, h = img.size\n",
-    "    \n",
-    "    grid = product(range(0, h-h%d, d), range(0, w-w%d, d))\n",
-    "    for i, j in grid:\n",
-    "        box = (j, i, j+d, i+d)\n",
-    "        out = os.path.join(dir_out, f'{name}_{i}_{j}{ext}')\n",
-    "        img.crop(box).save(out)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "f861a35e-4b9a-4076-965e-91ab41cb2b7c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tile('img.jpg', 'E:/W_Katrin/InnovationLab', 'E:/W_Katrin/InnovationLab/test', 256)"
    ]
   },
   {
@@ -161,19 +293,6 @@
    "metadata": {},
    "source": [
     "### This method results in a list of arrays"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "188c8062-010d-4236-b19a-c756980661d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im = mpimg.imread('img.jpg')\n",
-    "M = 256\n",
-    "N=256\n",
-    "tiles = [im[x:x+M,y:y+N] for x in range(0,im.shape[0],M) for y in range(0,im.shape[1],N)]\n"
    ]
   },
   {
