update to share

--- a/Tiling.ipynb
+++ b/Tiling.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "7ffec791-bd33-476b-814f-7f8884355b40",
    "metadata": {},
    "outputs": [],
@@ -59,13 +59,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "1e8124d8-7595-42f0-96f2-91e8ed92dccc",
    "metadata": {},
    "outputs": [],
    "source": [
     "savedir = r\"E:/W_Katrin/Kigali/Raster/tiles\"\n",
     "filename = r\"E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset.tif\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f78dd7bb-1123-40f2-add3-5d354f7ff891",
+   "metadata": {},
+   "source": [
+    "## Idea 0\n",
+    "#### gdal translate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8db4a7d2-587f-4bd7-8cf4-3f0a7f813f06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_ds = gdal.Open(filename)\n",
+    "out_ds = \"E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_RGB_2.jpg\"\n",
+    "ds=gdal.Translate(out_ds, in_ds, \n",
+    "                  format = \"JPEG\", \n",
+    "                  bandList = [1,2,3], \n",
+    "                  width = in_ds.RasterXSize, \n",
+    "                  height = in_ds.RasterYSize, \n",
+    "                  rgbExpand = \"rgb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "674636f3-69f7-4682-a87e-80f9c19b86aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_ds = gdal.Open(filename)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c9926419-0c84-4df5-9f0c-4632fc660ff9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8267"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "in_ds.RasterYSize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c5bd326a-feb2-46c3-b3a4-5d862031337c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_ds = \"E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_RGB_4.jpg\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5e5cab66-356f-42a9-baa3-b5704ca12059",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.system(\"gdal_translate -of JPEG -b 1 -b 2 -b 3 -scale - a_srs None E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset.tif E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_RGB_4.jpg\")"
    ]
   },
   {
@@ -221,9 +309,7 @@
     }
    ],
    "source": [
-    "# reshape the array to [[[b1, b2, b3]x13162]x8267]\n",
-    "for x in array: \n",
-    "    "
+    "# reshape the array to [[[b1, b2, b3]x13162]x8267]\n"
    ]
   },
   {
