udpate before big changes

--- a/Tiling.ipynb
+++ b/Tiling.ipynb
@@ -137,23 +137,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "id": "5e5cab66-356f-42a9-baa3-b5704ca12059",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usage: gdal_translate [--help-general] [--long-usage]\n",
+      "       [-ot {Byte/Int16/UInt16/UInt32/Int32/Float32/Float64/\n",
+      "             CInt16/CInt32/CFloat32/CFloat64}] [-strict]\n",
+      "       [-if format]* [-of format]\n",
+      "       [-b band] [-mask band] [-expand {gray|rgb|rgba}]\n",
+      "       [-outsize xsize[%]|0 ysize[%]|0] [-tr xres yres]\n",
+      "       [-r {nearest,bilinear,cubic,cubicspline,lanczos,average,mode}]\n",
+      "       [-unscale] [-scale[_bn] [src_min src_max [dst_min dst_max]]]* [-exponent[_bn] exp_val]*\n",
+      "       [-srcwin xoff yoff xsize ysize] [-epo] [-eco]\n",
+      "       [-projwin ulx uly lrx lry] [-projwin_srs srs_def]\n",
+      "       [-a_srs srs_def] [-a_coord_epoch epoch]\n",
+      "       [-a_ullr ulx uly lrx lry] [-a_nodata value]\n",
+      "       [-a_scale value] [-a_offset value]\n",
+      "       [-nogcp] [-gcp pixel line easting northing [elevation]]*\n",
+      "       |-colorinterp{_bn} {red|green|blue|alpha|gray|undefined}]\n",
+      "       |-colorinterp {red|green|blue|alpha|gray|undefined},...]\n",
+      "       [-mo \"META-TAG=VALUE\"]* [-q] [-sds]\n",
+      "       [-co \"NAME=VALUE\"]* [-stats] [-norat] [-noxmp]\n",
+      "       [-oo NAME=VALUE]*\n",
+      "       src_dataset dst_dataset\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR 6: Too many command options 'E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_RGB_4.jpg'\n"
+     ]
     }
    ],
    "source": [
-    "os.system(\"gdal_translate -of JPEG -b 1 -b 2 -b 3 -scale - a_srs None E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset.tif E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_RGB_4.jpg\")"
+    "!gdal_translate -of JPEG -b 1 -b 2 -b 3 -scale - a_srs None E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset.tif E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_RGB_4.jpg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "96c07c6d-e668-43a7-a275-ee66a65154e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'driver': 'JPEG', 'dtype': 'uint8', 'nodata': nan, 'width': 13162, 'height': 8267, 'count': 3, 'crs': CRS.from_epsg(32736), 'transform': Affine(0.4963054573117089, 0.0, 173723.36172185623,\n",
+      "       0.0, -0.4963054573117089, 9789230.701895246)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with rasterio.open(\"E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_RGB_4.jpg\") as src: \n",
+    "    meta = src.meta\n",
+    "    print(meta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "506b123e-4ec9-445e-81d8-6371de20ed21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Driver: JPEG/JPEG JFIF\n",
+      "Files: E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_RGB_4.jpg\n",
+      "       E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_RGB_4.jpg.aux.xml\n",
+      "Size is 13162, 8267\n",
+      "Coordinate System is:\n",
+      "PROJCRS[\"WGS 84 / UTM zone 36S\",\n",
+      "    BASEGEOGCRS[\"WGS 84\",\n",
+      "        DATUM[\"World Geodetic System 1984\",\n",
+      "            ELLIPSOID[\"WGS 84\",6378137,298.257223563,\n",
+      "                LENGTHUNIT[\"metre\",1]]],\n",
+      "        PRIMEM[\"Greenwich\",0,\n",
+      "            ANGLEUNIT[\"degree\",0.0174532925199433]],\n",
+      "        ID[\"EPSG\",4326]],\n",
+      "    CONVERSION[\"UTM zone 36S\",\n",
+      "        METHOD[\"Transverse Mercator\",\n",
+      "            ID[\"EPSG\",9807]],\n",
+      "        PARAMETER[\"Latitude of natural origin\",0,\n",
+      "            ANGLEUNIT[\"degree\",0.0174532925199433],\n",
+      "            ID[\"EPSG\",8801]],\n",
+      "        PARAMETER[\"Longitude of natural origin\",33,\n",
+      "            ANGLEUNIT[\"degree\",0.0174532925199433],\n",
+      "            ID[\"EPSG\",8802]],\n",
+      "        PARAMETER[\"Scale factor at natural origin\",0.9996,\n",
+      "            SCALEUNIT[\"unity\",1],\n",
+      "            ID[\"EPSG\",8805]],\n",
+      "        PARAMETER[\"False easting\",500000,\n",
+      "            LENGTHUNIT[\"metre\",1],\n",
+      "            ID[\"EPSG\",8806]],\n",
+      "        PARAMETER[\"False northing\",10000000,\n",
+      "            LENGTHUNIT[\"metre\",1],\n",
+      "            ID[\"EPSG\",8807]]],\n",
+      "    CS[Cartesian,2],\n",
+      "        AXIS[\"easting\",east,\n",
+      "            ORDER[1],\n",
+      "            LENGTHUNIT[\"metre\",1]],\n",
+      "        AXIS[\"northing\",north,\n",
+      "            ORDER[2],\n",
+      "            LENGTHUNIT[\"metre\",1]],\n",
+      "    ID[\"EPSG\",32736]]\n",
+      "Data axis to CRS axis mapping: 1,2\n",
+      "Origin = (173723.361721856228542,9789230.701895246282220)\n",
+      "Pixel Size = (0.496305457311709,-0.496305457311709)\n",
+      "Metadata:\n",
+      "  AREA_OR_POINT=Area\n",
+      "Image Structure Metadata:\n",
+      "  COMPRESSION=JPEG\n",
+      "  INTERLEAVE=PIXEL\n",
+      "  SOURCE_COLOR_SPACE=YCbCr\n",
+      "Corner Coordinates:\n",
+      "Upper Left  (  173723.362, 9789230.702) ( 30d 4' 3.04\"E,  1d54'15.76\"S)\n",
+      "Lower Left  (  173723.362, 9785127.745) ( 30d 4' 2.81\"E,  1d56'29.21\"S)\n",
+      "Upper Right (  180255.734, 9789230.702) ( 30d 7'34.22\"E,  1d54'16.11\"S)\n",
+      "Lower Right (  180255.734, 9785127.745) ( 30d 7'34.00\"E,  1d56'29.58\"S)\n",
+      "Center      (  176989.548, 9787179.223) ( 30d 5'48.52\"E,  1d55'22.67\"S)\n",
+      "Band 1 Block=13162x1 Type=Byte, ColorInterp=Red\n",
+      "  Description = Layer_1\n",
+      "  NoData Value=nan\n",
+      "  Overviews: 6581x4134, 3291x2067, 1646x1034\n",
+      "  Metadata:\n",
+      "    LAYER_TYPE=athematic\n",
+      "    OVERVIEWS_ALGORITHM=ErdasBino3\n",
+      "  Image Structure Metadata:\n",
+      "    COMPRESSION=JPEG\n",
+      "Band 2 Block=13162x1 Type=Byte, ColorInterp=Green\n",
+      "  Description = Layer_2\n",
+      "  NoData Value=nan\n",
+      "  Overviews: 6581x4134, 3291x2067, 1646x1034\n",
+      "  Metadata:\n",
+      "    LAYER_TYPE=athematic\n",
+      "    OVERVIEWS_ALGORITHM=ErdasBino3\n",
+      "  Image Structure Metadata:\n",
+      "    COMPRESSION=JPEG\n",
+      "Band 3 Block=13162x1 Type=Byte, ColorInterp=Blue\n",
+      "  Description = Layer_3\n",
+      "  NoData Value=nan\n",
+      "  Overviews: 6581x4134, 3291x2067, 1646x1034\n",
+      "  Metadata:\n",
+      "    LAYER_TYPE=athematic\n",
+      "    OVERVIEWS_ALGORITHM=ErdasBino3\n",
+      "  Image Structure Metadata:\n",
+      "    COMPRESSION=JPEG\n"
+     ]
+    }
+   ],
+   "source": [
+    "dst = gdal.Open(\"E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_RGB_4.jpg\")\n",
+    "dst.GetMetadata()\n",
+    "!gdalinfo E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_RGB_4.jpg"
    ]
   },
   {
