added some parts
Tiling: added Create Point; Unet: first prediction on Kigali dataset
with model 17

--- a/Tiling.ipynb
+++ b/Tiling.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "id": "7ffec791-bd33-476b-814f-7f8884355b40",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,12 @@
     "import sys\n",
     "from PIL import Image\n",
     "from osgeo import gdal\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import rasterio\n",
+    "from osgeo import osr\n",
+    "import geopandas as gpd\n",
+    "from shapely.geometry import Point\n",
+    "from pyproj import CRS"
    ]
   },
   {
@@ -68,30 +73,52 @@
    "id": "d8ec884c-e82e-454f-bf8e-9b7712547b5d",
    "metadata": {},
    "source": [
-    "!ToDO: \n",
-    "Create Point for later usage\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7840c851-c390-4e61-88b4-e9e342f2004d",
-   "metadata": {},
-   "source": [
-    "## Strip of Georeference of Tif File"
+    "## Create Point for later Georeferencing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "9ac61774-4919-4d95-9bf4-c33d53a5fcc7",
+   "execution_count": 107,
+   "id": "a8593b19-3274-41c9-bef8-c7a316b45bce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SRC_CRS: 32736\n",
+      "Point: POINT (173723.36172185623 9789230.701895246)\n",
+      "GeoDataFrame CRS: epsg:32736\n"
+     ]
+    }
+   ],
    "source": [
-    "fn = \"E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset.tif\"\n",
-    "fn_new = \"E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_copy.tif\"\n",
-    "ds = gdal.Open(fn)\n",
-    "driver = gdal.GetDriverByName(\"GTiff\")\n",
-    "ds_copy = driver.CreateCopy(fn_new, ds, strict=0)"
+    "# get coordinates from raster\n",
+    "src = gdal.Open(filename)\n",
+    "\n",
+    "ulx, xres, xskew, uly, yskew, yres  = src.GetGeoTransform() # ulx, uly = upper left x and y values\n",
+    "\n",
+    "# get projection from raster\n",
+    "wkt = src.GetProjection()\n",
+    "src_crs = osr.SpatialReference(wkt).GetAttrValue('AUTHORITY',1)\n",
+    "print(\"SRC_CRS:\", src_crs)\n",
+    "\n",
+    "# create Point \n",
+    "point = Point(ulx, uly)\n",
+    "print(\"Point:\", point)\n",
+    "\n",
+    "#create new GeoDataFrame to save the point in\n",
+    "newdata = gpd.GeoDataFrame()\n",
+    "newdata['geometry'] = None\n",
+    "newdata.loc[0, 'geometry'] = point\n",
+    "\n",
+    "# Set the GeoDataFrame's coordinate system to the same as the src raster \n",
+    "newdata.crs = CRS.from_epsg(src_crs)\n",
+    "print(\"GeoDataFrame CRS:\", newdata.crs)\n",
+    "\n",
+    "#save GeoDataFrame\n",
+    "outfp = \"E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_ReferencePointUL.shp\"\n",
+    "newdata.to_file(outfp)"
    ]
   },
   {
@@ -161,7 +188,8 @@
    "metadata": {},
    "source": [
     "## Convert Tif to JPEG\n",
-    "#### using gdal translate"
+    "#### using gdal translate\n",
+    "https://gis.stackexchange.com/questions/42584/how-to-call-gdal-translate-from-python-code"
    ]
   },
   {
